@@ -48,6 +48,9 @@ class DHCTest(common.DHCommon):
             "--no-submit", action="store_true",
             help="Don't submit after each part")
         parser.add_argument(
+            "--ctest-build-name", action="store",
+            help="Name of the CTest build")
+        parser.add_argument(
             "extra_args", nargs="*")
 
     def get_dh_ctest_driver(self):
@@ -81,6 +84,8 @@ class DHCTest(common.DHCommon):
                 args.append("-DDH_CTEST_SITE:STRING=" + site)
 
             build = get_deb_ctest_option("build")
+            if self.options.ctest_build_name:
+                build = self.options.ctest_build_name
             if isinstance(build, str):
                 args.append("-DDH_CTEST_BUILD:STRING=" + build)
 
